# libRoboFlow

./: .gitignore  CMakeLists.txt  README.md
apps/: CMakeLists.txt  mpp_h264_smoke.cpp  pull_demo.cpp  pull_demo_sdk.cpp  push_demo.cpp  push_demo_sdk.cpp  signaling_server.cpp
build_verify/: CMakeCache.txt
doc/: README.md
doc/client-sdk/: 01-sequences.md  02-c4.md
docs/: ARCHITECTURE.md  ARCHITECTURE_ANDROID_SUBSCRIBER.md  ARCHITECTURE_PUBLISHER.md  ARCHITECTURE_VERIFICATION.md  CPP_INTEGRATION.md  MEDIA_SOURCE_ABSTRACTION.md  README.md  SCOPE.md  SIGNALING.md  SIGNALING_V1.md  STATE_MACHINE_AND_ERRORS.md  WEBRTC_BASE.md  client_api_design.md  runtime_knobs.md  service_api_design.md
docs/client-sdk/: 02-c4-container.md  03-state-machines.md  03-states.md  README.md
docs/dev/: git-linux-migration.md
include/: commonvideo.h  commonvideo.hpp
include/rflow/: librflow_common.h  librflow_typedef.h  librflow_version.h
include/rflow/Client/: librflow_client_api.h
include/rflow/Service/: librflow_service_api.h
include/robrt/: librobrt_common.h  librobrt_typedef.h  librobrt_version.h
include/robrt/Client/: librobrt_client_api.h
scripts/: build.sh  build_android.ps1  build_linux_arm64.sh  pull.sh  pull_e2e_with_rss.sh  push.sh  restart_signal_push_720p60.sh  rss_watch.sh  run_signaling_and_push_demo_sdk.sh  verify_push_pull_e2e.sh
src/client/: CMakeLists.txt  connect_cb.cpp  connect_info.cpp  infrastructure.cpp  lifecycle.cpp  runtime_log.cpp  signaling.cpp  stream.cpp  stream_cb.cpp  stream_param.cpp
src/client/impl/: android_hw_video_decoder_factory.cpp  android_mediacodec_video_decoder.cpp  signaling_client.cpp  webrtc_factory.cpp  webrtc_pull_manager.cpp  webrtc_pull_stream.cpp
src/client/impl/decoder/android/: android_hw_video_decoder_factory.cpp  android_hw_video_decoder_factory.h  android_mediacodec_video_decoder.cpp  android_mediacodec_video_decoder.h
src/client/impl/rtc_stream/: rtc_stream_frame_converter.cpp  rtc_stream_frame_converter.h  rtc_stream_manager.cpp  rtc_stream_manager.h  rtc_stream_session.cpp  rtc_stream_session.h
src/client/impl/signaling/: signaling_client.cpp  signaling_client.h  signaling_io_manager.cpp  signaling_io_manager.h
src/client/impl/webrtc/: webrtc_factory.cpp  webrtc_factory.h  webrtc_frame_converter.cpp  webrtc_frame_converter.h  webrtc_pull_manager.cpp  webrtc_pull_manager.h  webrtc_pull_stream.cpp  webrtc_pull_stream.h
src/client/internal/: handles.h  infrastructure.h  state.h
src/common/: CMakeLists.txt
src/common/config/: global_config.cpp  license_config.cpp  signal_config.cpp
src/common/error/: last_error.cpp
src/common/frame/: audio_frame.cpp  stream_stats.cpp  video_frame.cpp
src/common/internal/: frame_impl.h  global_config_impl.h  handle.h  last_error.h  license_config_impl.h  log_config_impl.h  logger.h  signal_config_impl.h
src/common/log/: log_config.cpp  logger.cpp
src/common/util/: memory.cpp  version.cpp
src/core/: CMakeLists.txt
src/core/net/: posix_io.cpp  posix_io.h
src/core/rtc/: peer_connection_factory.cpp  peer_connection_factory.h  peer_connection_factory_deps.cpp  peer_connection_factory_deps.h  rtc.h  rtc_factory_common.cpp  rtc_factory_common.h  rtc_stub.cpp
src/core/rtc/decoder/android/: android_hw_video_decoder_factory.cpp  android_hw_video_decoder_factory.h  android_mediacodec_video_decoder.cpp  android_mediacodec_video_decoder.h
src/core/rtc/hw/: backend_registry.cpp  backend_registry.h
src/core/rtc/hw/android/: mediacodec_video_decoder.cpp  mediacodec_video_decoder.h  native_dec_frame_buffer.cpp  native_dec_frame_buffer.h  video_decoder_factory.cpp  video_decoder_factory.h
src/core/rtc/hw/rockchip_mpp/: h264_decoder.cpp  h264_decoder.h  h264_encoder.cpp  h264_encoder.h  mjpeg_decoder.cpp  mjpeg_decoder.h  native_dec_frame_buffer.cpp  native_dec_frame_buffer.h  video_decoder_factory.cpp  video_decoder_factory.h  video_encoder_factory.cpp  video_encoder_factory.h
src/core/signal/: README.md  protocol.cpp  protocol.h  server.cpp  server.h  session.h  signal.h  signal_stub.cpp
src/core/thread/: thread_pool.cpp  thread_pool.h
src/service/: CMakeLists.txt  connect_cb.cpp  connect_info.cpp  license_info.cpp  lifecycle.cpp  push_frame.cpp  runtime_log.cpp  signaling.cpp  stream.cpp  stream_cb.cpp  stream_param.cpp  talk_config.cpp
src/service/impl/: CMakeLists.txt  publisher.cpp  publisher.h
src/service/impl/app/: pull_demo.cpp  push_demo.cpp  signaling_server.cpp
src/service/impl/camera/: camera_utils.cpp  camera_utils.h
src/service/impl/config/: config_loader.cpp  config_loader.h  streams.conf  streams_1080p_stable.conf
src/service/impl/media/: camera_video_track_source.cpp  camera_video_track_source.h  external_push_video_track_source.cpp  external_push_video_track_source.h  pull_subscriber.cpp  pull_subscriber.h  push_streamer.cpp  push_streamer.h
src/service/impl/sdk/camera/: camera_utils.h
src/service/impl/sdk/config/: config_loader.cpp
src/service/impl/sdk/media/: camera_video_track_source.cpp  pull_subscriber.cpp  push_streamer.cpp
src/service/impl/sdk/signaling/: signaling_client.cpp  signaling_server_main.cpp  signaling_server_main.h
src/service/impl/sdk/webrtc/: peer_connection_factory.cpp  sequence_checker_expectation_to_string.cpp  sme_abi_stubs.c
src/service/impl/sdk/webrtc/hw/: backend_registry.cpp
src/service/impl/sdk/webrtc/hw/rockchip_mpp/: h264_decoder.cpp  h264_encoder.cpp  mjpeg_decoder.cpp  native_dec_frame_buffer.cpp  video_decoder_factory.cpp  video_encoder_factory.cpp
src/service/impl/signaling/: signaling_client.cpp  signaling_client.h  signaling_io_manager.cpp  signaling_io_manager.h
src/service/impl/utils/: json_utils.cpp  net_io.cpp
src/service/internal/: handles.h  state.h
test/: CMakeLists.txt  demo_client_init.c  demo_service_init.c
tools/: analyze_latency_report.py  explain_e2e_outliers.py  parse_e2e_latency.py  run_e2e_baseline.py  run_e2e_regression.py  run_e2e_weaknet.sh  run_e2e_with_system_trace.sh  stage_jitter_breakdown.py  summarize_push_pipeline.py  summarize_server_e2e_tx.py
(+19 files in other folders)
